--- a/css/main.css
+++ b/css/main.css
@@ -367,11 +367,11 @@ html {
   background: #fff; }
 
 body {
-  font-family: "Lora", "Minion Pro", Palatino, Georgia, serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 140%;
   color: #333;
   background: #f8f8f8;
-  font-size: 16px;
-  line-height: 1.5; }
+  font-size: 16px; }
 
 .wrapper:before,
 .wrapper:after {
@@ -410,12 +410,10 @@ body {
   text-shadow: none; }
 
 .section-header {
-  border-top: 1px solid #c7c7c7;
-  border-bottom: 1px solid #c7c7c7;
   padding: .6rem 0 .4rem;
   margin-bottom: 1.5rem; }
   .section-header h2 {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Sora", "Minion Pro", Palatino, Georgia, serif;
     font-weight: 700;
     font-size: 1.75rem;
     letter-spacing: -.05rem;
@@ -438,7 +436,7 @@ body {
     display: block;
     border: 1px solid #528D76; }
   .page-header .header-name {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Sora", "Minion Pro", Palatino, Georgia, serif;
     color: #fff;
     font-size: 3rem;
     font-weight: 700;
@@ -447,7 +445,7 @@ body {
     line-height: 1;
     margin: 1rem 0 0; }
   .page-header .header-contact-info {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Sora", "Minion Pro", Palatino, Georgia, serif;
     color: #fff;
     text-align: center; }
   .page-header .header-contact-info p a {
@@ -465,7 +463,7 @@ body {
       clear: both;
       content: ""; }
     .page-header .title-bar .header-title {
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: "Sora", "Minion Pro", Palatino, Georgia, serif;
       color: #fff;
       font-weight: 300;
       font-size: 1.75rem;
@@ -544,7 +542,7 @@ body {
   .content-section .resume-item {
     margin-bottom: 2rem; }
   .content-section .resume-item-title {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Sora", "Minion Pro", Palatino, Georgia, serif;
     font-weight: 700;
     margin: 0 0 .75rem;
     font-size: 1.5rem;
@@ -602,7 +600,7 @@ body {
   .page-header {
     padding: 1rem 0 .2rem; }
     .page-header .header-name {
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: "Sora", "Minion Pro", Palatino, Georgia, serif;
       font-weight: 700;
       font-size: 2rem;
       margin: 0 0 .2rem; }
